work proccess se tion done

--- a/index.html
+++ b/index.html
@@ -49,73 +49,83 @@
 
 <body class="font-manrope m-0 p-0">
 
-  <header class="bg-color-bg">
-   <div class=" bg-color">
-     <!-- navbar -->
-     <div class="container mx-auto grid grid-cols-2 lg:grid-cols-4 w-full py-2 px-8 lg:px-15">
-      <div class="flex justify-start items-center gap-2 ">
-        <i
-          class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i>
-        <a class="text-2xl md:text-3xl font-black">Rinterio</a>
-      </div>
-      <div class="hidden lg:flex flex-column  col-span-2 ">
-        <ul class="flex m-auto space-x-4 items-center">
-          <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Home</a></li>
-          <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Services</a></li>
-          <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Portfolio</a></li>
-          <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Blogs</a></li>
-          <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Contact Us</a></li>
-        </ul>
-      </div>
-      <div class="flex justify-end items-center gap-4">
-        <div class="hidden md:flex justify-end items-center gap-3">
+  <header class="bg-color-bg ">
+    <div class=" bg-color ">
+      <!-- navbar -->
+      <div class="container mx-auto grid grid-cols-2 lg:grid-cols-4 w-full py-2 px-8 lg:px-30">
+        <div class="flex justify-start items-center gap-2 ">
           <i
-            class="fa-solid fa-magnifying-glass text-lg flex justify-center items-center rounded-full bg-white h-10 w-10 "></i>
-          <i class="fa-solid fa-cart-shopping text-lg flex justify-center items-center rounded-full bg-white h-10 w-10"></i>
-          <a class="flex justify-center items-center btn bg-primary-color hover:bg-primary-color border-none">Book Consult<i
-            class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 w-6 h-6 lg:h-8 lg:w-8"></i></a>
+            class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i>
+          <a class="text-2xl md:text-3xl font-black">Rinterio</a>
         </div>
-        
-        <div class="lg:hidden flex justify-end items-center">
-          <i class="fa-solid fa-bars text-2xl"></i>
+        <div class="hidden lg:flex flex-column  col-span-2 ">
+          <ul class="flex m-auto space-x-4 items-center">
+            <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Home</a></li>
+            <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Services</a></li>
+            <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Portfolio</a></li>
+            <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Blogs</a></li>
+            <li><a class="text-secondary-color hover:font-bold duration-300 ease-in-out">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="flex justify-end items-center gap-4">
+          <div class="hidden md:flex justify-end items-center gap-3">
+            <i
+              class="fa-solid fa-magnifying-glass text-lg flex justify-center items-center rounded-full bg-white h-10 w-10 "></i>
+            <i
+              class="fa-solid fa-cart-shopping text-lg flex justify-center items-center rounded-full bg-white h-10 w-10"></i>
+            <a class="flex justify-center items-center btn bg-primary-color hover:bg-primary-color border-none">Book
+              Consult<i
+                class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 w-6 h-6 lg:h-8 lg:w-8"></i></a>
+          </div>
+
+          <div class="lg:hidden flex justify-end items-center">
+            <i class="fa-solid fa-bars text-2xl"></i>
+          </div>
+
         </div>
 
       </div>
 
+      <!-- hero-section -->
+      <section class="">
+        <div class="flex w-full flex-col justify-center items-center gap-5 py-2 px-8 mb-15">
+          <img class="w-1/2" src="./assets/banner.png" alt="">
+          <h1 class="text-3xl md:w-3/4 lg:text-6xl font-black text-black text-center  ">A barn house of this design has
+            a striking
+            appearance
+          </h1>
+          <div class="flex flex-col items-center text-center">
+            <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm
+              and modern sophistication, featuring weathered
+              wood,
+              sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button
+              class="flex justify-center items-center p-3 rounded-3xl gap-3 text-xl font-black bg-primary-bg w-60">View
+              Details<i
+                class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
+          </div>
+        </div>
+      </section>
     </div>
-
-    <!-- hero-section -->
-    <section class="">
-      <div class="flex w-full flex-col justify-center items-center gap-5 py-2 px-8 mb-15">
-        <img class="w-1/2" src="./assets/banner.png" alt="">
-        <h1 class="text-3xl md:w-3/4 lg:text-6xl font-black text-black text-center  ">A barn house of this design has a striking
-          appearance
-        </h1>
-        <div class="flex flex-col items-center text-center">
-          <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
-            wood,
-            sleek metal accents, and large windows that flood the space with natural light.</p>
-          <button
-            class="flex justify-center items-center p-3 rounded-3xl gap-3 text-xl font-black bg-primary-bg w-60">View
-            Details<i
-              class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
-        </div>
-      </div>
-    </section>
-   </div>
   </header>
 
   <main class=" my-12 py-8 lg:py-24 px-8 bg-color-bg">
     <!-- about us section -->
-     <section class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 ">
+    <section class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 ">
       <!-- about us content -->
-       <div class="w-full">
+      <div class="w-full">
         <div class=" gap-4">
-          <div class="relative hidden lg:flex  "><img class="absolute -left-20 -top-20 border-2 border-gray-300 border-dashed p-6" src="./assets/Vector.png" alt=""></div>
+          <div class="relative hidden lg:flex  "><img
+              class="absolute -left-20 -top-20 border-2 border-gray-300 border-dashed p-6" src="./assets/Vector.png"
+              alt=""></div>
           <div class="flex flex-col items-center gap-6 lg:items-start">
-            <h4 class="w-[130px] text-secondary-color bg-white text-lg text-center py-2 px-3 rounded-lg "><i class="fa-solid fa-arrow-right text-lg pr-2"></i> About Us</h4>
-          <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-6xl font-black text-black text-center lg:text-start">We design thoughtful, liveable spaces</h1>
-          <p class="md:mb-4 md:w-3/4 text-secondary-color text-center lg:text-start">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <h4 class="w-[9rem] text-secondary-color bg-white text-lg text-center py-2 px-3 rounded-lg font-bold"><i
+                class="fa-solid fa-arrow-right text-lg pr-2"></i> About Us</h4>
+            <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center lg:text-start">We
+              design thoughtful, liveable spaces</h1>
+            <p class="md:mb-4 md:w-3/4 text-secondary-color text-center lg:text-start">The barn house captivates with
+              its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and
+              large windows that flood the space with natural light.</p>
           </div>
         </div>
         <div class=" my-2 flex flex-col md:flex-row lg:flex-col gap-2 lg:justify-start">
@@ -126,7 +136,8 @@
             </div>
             <div>
               <h4 class="text-secondary-color text-lg font-semibold">Commercial</h4>
-              <p class="md:mb-4 md:w-3/4 text-tertiary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+              <p class="md:mb-4 md:w-3/4 text-tertiary-color">The barn house captivates with its blend of rustic charm
+                and modern.</p>
             </div>
           </div>
 
@@ -138,19 +149,101 @@
             </div>
             <div>
               <h4 class="text-secondary-color text-lg font-semibold">Commercial</h4>
-              <p class="md:mb-4 md:w-3/4 text-tertiary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+              <p class="md:mb-4 md:w-3/4 text-tertiary-color">The barn house captivates with its blend of rustic charm
+                and modern.</p>
             </div>
           </div>
 
 
 
         </div>
-       </div>
-       <!-- about us img -->
-        <div class=" flex lg:justify-end">
-          <img class="w-full md:object-cover lg:w-full lg:h-full rounded-2xl md:h-[385px]" src="./assets/Rectangle.png" alt="">
+      </div>
+      <!-- about us img -->
+      <div class=" flex lg:justify-end">
+        <img class="w-full md:object-cover lg:w-full lg:h-[35rem] rounded-2xl md:h-[24rem]" src="./assets/Rectangle.png"
+          alt="">
+      </div>
+    </section>
+
+
+    <!-- review -->
+    <section class=" my-8 container mx-auto bg-white rounded-3xl">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-between mb-200 p-6 gap-6 ">
+        <div class="flex flex-col justify-center items-center text-center p-2 gap-1">
+          <div><i class="fa-regular fa-message text-3xl text-tertiary-color"></i></div>
+          <h4 class="text-secondary-color text-3xl font-black">235+</h4>
+          <p class="md:mb-4 md:w-3/4 text-secondary-color">Happy Client Review</p>
         </div>
-     </section>
+        <div class="flex flex-col justify-center items-center text-center p-2 gap-1">
+          <div><i class="fa-regular fa-message text-3xl text-tertiary-color"></i></div>
+          <h4 class="text-secondary-color text-3xl font-black">235+</h4>
+          <p class="md:mb-4 md:w-3/4 text-secondary-color">Happy Client Review</p>
+        </div>
+        <div class="flex flex-col justify-center items-center text-center p-2 gap-1">
+          <div><i class="fa-regular fa-message text-3xl text-tertiary-color"></i></div>
+          <h4 class="text-secondary-color text-3xl font-black">235+</h4>
+          <p class="md:mb-4 md:w-3/4 text-secondary-color">Happy Client Review</p>
+        </div>
+        <div class="flex flex-col justify-center items-center text-center p-2 gap-1">
+          <div><i class="fa-regular fa-message text-3xl text-tertiary-color"></i></div>
+          <h4 class="text-secondary-color text-3xl font-black">235+</h4>
+          <p class="md:mb-4 md:w-3/4 text-secondary-color">Happy Client Review</p>
+        </div>
+
+
+
+
+
+
+      </div>
+    </section>
+    <!-- Our work process -->
+    <section>
+      <div>
+        <!-- process content heading -->
+        <div>
+          <div class=" gap-4">
+            
+            <div class="flex flex-col items-center gap-6">
+              <h4 class="w-[11rem] text-secondary-color bg-white text-lg text-center py-2 px-3 rounded-3xl font-bold"><i
+                  class="fa-solid fa-arrow-right text-lg pr-2"></i> How we works</h4>
+              <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center">Our Works Process</h1>
+              <p class="md:mb-4 md:w-2/4 text-secondary-color text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+          </div>
+
+
+        </div>
+        <!-- process topic -->
+        <div>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-between mb-200 p-6 gap-6">
+            <div class="p-6 flex flex-col justify-center items-center text-center gap-1 bg-[#E7C1D3] rounded-3xl">
+              <div><i class="fa-regular fa-message text-3xl text-black"></i></div>
+              <h4 class="text-black text-3xl font-black">Concept</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+            <div class="flex flex-col justify-center items-center text-center p-6 gap-1 bg-[#EFDA6E] rounded-3xl">
+              <div><i class="fa-regular fa-message text-3xl text-blackr"></i></div>
+              <h4 class="text-black text-3xl font-black">Design Process</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+            <div class="flex flex-col justify-center items-center text-center p-6 gap-1 bg-[#A4DAC3] rounded-3xl">
+              <div><i class="fa-regular fa-message text-3xl text-black"></i></div>
+              <h4 class="text-black text-3xl font-black">Supervision</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+            <div class="flex flex-col justify-center items-center text-center p-6 gap-1 bg-[#77AAEA]  rounded-3xl">
+              <div><i class="fa-regular fa-message text-3xl text-black"></i></div>
+              <h4 class="text-black text-3xl font-black">Budget Planning</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+        </div>
+      </div>
+
+
+    </section>
+
+
   </main>
 
 </body>
