articles and contact form done

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
       <section class="">
         <div class="flex w-full flex-col justify-center items-center gap-5 py-2 px-8 mb-15">
           <img class="w-1/2" src="./assets/banner.png" alt="">
-          <h1 class="text-3xl md:w-3/4 lg:text-6xl font-black text-black text-center  ">A barn house of this design has
+          <h1 class="text-3xl md:w-3/4 md:text-5xl lg:text-6xl font-black text-black text-center  ">A barn house of this
+            design has
             a striking
             appearance
           </h1>
@@ -128,7 +129,7 @@
               large windows that flood the space with natural light.</p>
           </div>
         </div>
-        <div class=" my-2 flex flex-col md:flex-row lg:flex-col gap-2 lg:justify-start">
+        <div class=" my-2 flex flex-col md:flex-row lg:flex-col gap-4 lg:justify-start">
           <!-- card-1 -->
           <div class="bg-white p-4 lg:p-6 rounded-3xl flex gap-6">
             <div class="flex justify-center items-center">
@@ -160,7 +161,7 @@
       </div>
       <!-- about us img -->
       <div class=" flex lg:justify-end">
-        <img class="w-full md:object-cover lg:w-full lg:h-[35rem] rounded-2xl md:h-[24rem]" src="./assets/Rectangle.png"
+        <img class="w-full md:object-cover lg:w-full lg:h-full rounded-2xl md:h-[24rem]" src="./assets/Rectangle.png"
           alt="">
       </div>
     </section>
@@ -191,10 +192,6 @@
         </div>
 
 
-
-
-
-
       </div>
     </section>
     <!-- Our work process -->
@@ -203,48 +200,341 @@
         <!-- process content heading -->
         <div>
           <div class=" gap-4">
-            
+
             <div class="flex flex-col items-center gap-6">
               <h4 class="w-[11rem] text-secondary-color bg-white text-lg text-center py-2 px-3 rounded-3xl font-bold"><i
                   class="fa-solid fa-arrow-right text-lg pr-2"></i> How we works</h4>
-              <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center">Our Works Process</h1>
-              <p class="md:mb-4 md:w-2/4 text-secondary-color text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center">Our Works Process
+              </h1>
+              <p class="md:mb-4 md:w-2/4 text-secondary-color text-center">The barn house captivates with its blend of
+                rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
           </div>
 
 
         </div>
         <!-- process topic -->
-        <div>
+        <div class="container mx-auto">
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-between mb-200 p-6 gap-6">
-            <div class="p-6 flex flex-col justify-center items-center text-center gap-1 bg-[#E7C1D3] rounded-3xl">
+            <div class="p-6 flex flex-col justify-center items-start gap-1 bg-[#E7C1D3] rounded-3xl">
               <div><i class="fa-regular fa-message text-3xl text-black"></i></div>
-              <h4 class="text-black text-3xl font-black">Concept</h4>
-              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+              <h4 class="text-black text-2xl font-black">Concept</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm
+                and modern.</p>
             </div>
-            <div class="flex flex-col justify-center items-center text-center p-6 gap-1 bg-[#EFDA6E] rounded-3xl">
+            <div class="flex flex-col justify-center items-start gap-1 p-6 bg-[#EFDA6E] rounded-3xl">
               <div><i class="fa-regular fa-message text-3xl text-blackr"></i></div>
-              <h4 class="text-black text-3xl font-black">Design Process</h4>
-              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+              <h4 class="text-black text-2xl font-black">Design Process</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm
+                and modern.</p>
             </div>
-            <div class="flex flex-col justify-center items-center text-center p-6 gap-1 bg-[#A4DAC3] rounded-3xl">
+            <div class="flex flex-col justify-center items-start p-6 gap-1 bg-[#A4DAC3] rounded-3xl">
               <div><i class="fa-regular fa-message text-3xl text-black"></i></div>
-              <h4 class="text-black text-3xl font-black">Supervision</h4>
-              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+              <h4 class="text-black text-2xl font-black">Supervision</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm
+                and modern.</p>
             </div>
-            <div class="flex flex-col justify-center items-center text-center p-6 gap-1 bg-[#77AAEA]  rounded-3xl">
+            <div class="flex flex-col justify-center items-start p-6 gap-1 bg-[#77AAEA]  rounded-3xl">
               <div><i class="fa-regular fa-message text-3xl text-black"></i></div>
-              <h4 class="text-black text-3xl font-black">Budget Planning</h4>
-              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm and modern.</p>
+              <h4 class="text-black text-2xl font-black">Budget Planning</h4>
+              <p class="md:mb-4 md:w-3/4 text-secondary-color">The barn house captivates with its blend of rustic charm
+                and modern.</p>
             </div>
+          </div>
         </div>
-      </div>
 
 
     </section>
 
+    <!-- portfolio section -->
+    <section class="bg-color-bg my-16">
+
+      <div class="container mx-auto">
+        <!-- portfolio content heading -->
+        <div class="">
+
+          <div class=" gap-4">
+
+            <div class="flex flex-col items-center gap-6">
+              <h4
+                class="w-[17rem] text-secondary-color bg-primary-bg text-lg text-center py-2 px-3 rounded-3xl font-bold">
+                <i class="fa-solid fa-arrow-right text-lg pr-2"></i> Explore our Latest works
+              </h4>
+              <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center">Our Latest
+                Portfolio
+              </h1>
+              <p class="md:mb-4 md:w-2/4 text-secondary-color text-center">The barn house captivates with its blend of
+                rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            </div>
+          </div>
+          <!-- portfolio cards -->
+          <div class="my-8 lg:my-16 container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+            <!-- card-1 -->
+
+
+            <div class=" w-full bg-white flex-col md:flex-row md:col-span-2 lg:col-span-3 flex rounded-3xl">
+              <div class="md:w-2/5 rounded-3xl p-6">
+                <img class="object-cover h-full w-full bg-white rounded-3xl" src="./assets/img1.png" alt="">
+              </div>
+
+              <div class="md:w-3/5 flex flex-col md:pb-10 py-4 justify-evenly g-3 px-8">
+                <h4 class="text-secondary-color text-2xl font-black">Commercial</h4>
+                <p class="md:mb-4 text-tertiary-color text-lg">The barn house captivates with its blend of
+                  rustic charm and modern. The barn house captivates with its blend of rustic charm and modern. </p>
+                <button class="flex rounded-3xl gap-3 text-xl font-black ">View
+                  Details<i
+                    class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
+              </div>
+
+
+            </div>
+            <!-- card-2 -->
+            <div class="object-fit w-full bg-white rounded-3xl p-6 ">
+              <img class="object-cover h-[100%] w-full rounded-2xl" src="./assets/img2.png" alt="">
+            </div>
+
+            <!-- card-3 -->
+            <div class=" w-full bg-white p-6 rounded-3xl">
+              <img class="object-cover h-full w-full " src="./assets/img3.png" alt="">
+            </div>
+
+            <!-- card-4 -->
+            <div class=" bg-white w-full flex-col md:flex-row md:col-span-2 lg:col-span-2 flex rounded-3xl">
+              <div class="md:w-2/4 rounded-3xl  p-6 ">
+                <img class="md:object-cover h-full w-full rounded-3xl" src="./assets/img4.png" alt="">
+              </div>
+
+              <div class="md:w-2/4 flex flex-col justify-between p-6">
+                <h4 class="text-secondary-color text-2xl font-black">Commercial</h4>
+                <p class="text-secondary-color text-lg">The barn house captivates with its blend of
+                  rustic charm and modern. The barn house captivates with its blend of rustic charm and modern. </p>
+                <button class="flex rounded-3xl gap-3 text-xl font-black w-60 ">View
+                  Details<i
+                    class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
+              </div>
+            </div>
+
+            <!-- card-5 -->
+            <div class="w-full bg-white p-6   rounded-3xl">
+              <img class="object-cover h-full w-full" src="./assets/img5.png" alt="">
+            </div>
+
+            <!-- card-6 -->
+            <div class="lg:hidden w-full bg-white p-6 rounded-3xl">
+              <img class="object-cover h-full w-full" src="./assets/img5.png" alt="">
+            </div>
+
+
+
+          </div>
+
+
+    </section>
+
+    <section>
+      <!-- article content -->
+      <div class="flex flex-col items-center gap-6">
+        <h4 class="w-[12rem] text-secondary-color bg-primary-bg text-lg text-center py-2 px-3 rounded-3xl font-bold">
+          <i class="fa-solid fa-arrow-right text-lg pr-2"></i> Rinterio News
+        </h4>
+        <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center">Read Our Articles and
+          News
+        </h1>
+        <p class="md:mb-4 md:w-2/4 text-secondary-color text-center">The barn house captivates with its blend of
+          rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+      </div>
+
+      <!-- articles -->
+
+      <!-- article-1 -->
+
+      <div class="container mx-auto grid grid-cols-1 lg:grid-cols-3 gap-6">
+        <div class="md:flex lg:flex-col rounded-lg bg-white p-8 gap-6">
+          <div class="object-cover w-full bg-white rounded-3xl mb-4 md:mb-0 ">
+            <img class="object-cover md:h-full w-full rounded-2xl" src="./assets/article1.png" alt="">
+          </div>
+
+
+          <!-- contents -->
+
+          <div class="">
+            <div class="flex gap-4 md:mt-2 lg:mt-0">
+              <div class="flex gap-2">
+                <i class="fa-solid fa-calendar-days text-tertiary-color  text-sm"></i>
+                <h3 class="text-tertiary-color text-sm">JUly14,2024</h3>
+              </div>
+              <div class="flex gap-2">
+                <i class="fa-regular fa-user text-tertiary-color  text-sm"></i>
+                <h3 class="text-tertiary-color  text-sm">JUly14,2024</h3>
+              </div>
+
+            </div>
+
+            <div>
+
+              <div class="flex flex-col py-3 justify-between ">
+                <h4 class="text-secondary-color text-xl font-black mb-3 lg:my-1 mb-3">How to choose the furniture<br> right of your
+                  home.</h4>
+                <p class="md:mb-4 text-tertiary-color text-base">The barn house captivates with its blend of
+                  rustic charm and modern. The barn house captivates with its blend of rustic charm and modern. </p>
+                <button class="flex gap-3 text-xl font-black ">Read More<i
+                    class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+        <!-- article-2 -->
+        <div class=" md:flex lg:flex-col rounded-lg bg-white p-8 gap-6">
+          <div class="object-cover w-full bg-white rounded-3xl mb-4 md:mb-0">
+            <img class="object-cover md:h-full w-full rounded-2xl" src="./assets/article2.png" alt="">
+          </div>
+
+
+          <!-- contents -->
+
+          <div class="">
+            <div class="flex gap-4 md:mt-2 lg:mt-0">
+              <div class="flex gap-2">
+                <i class="fa-solid fa-calendar-days text-tertiary-color  text-sm"></i>
+                <h3 class="text-tertiary-color text-sm">JUly14,2024</h3>
+              </div>
+              <div class="flex gap-2">
+                <i class="fa-regular fa-user text-tertiary-color  text-sm"></i>
+                <h3 class="text-tertiary-color  text-sm">JUly14,2024</h3>
+              </div>
+
+            </div>
+
+            <div>
+
+              <div class="flex flex-col py-3 justify-between ">
+                <h4 class="text-secondary-color text-xl font-black mb-3 lg:my-1">How to choose the furniture <br> right of your
+                  home.</h4>
+                <p class="md:mb-4 text-tertiary-color text-base">The barn house captivates with its blend of
+                  rustic charm and modern. The barn house captivates with its blend of rustic charm and modern. </p>
+                <button class="flex gap-3 text-xl font-black ">Read More<i
+                    class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+        <!-- article-3 -->
+
+        <div class="md:flex lg:flex-col rounded-lg bg-white p-8 gap-6">
+          <div class="object-cover w-full bg-white rounded-3xl mb-4 md:mb-0 ">
+            <img class="object-cover md:h-full w-full rounded-2xl" src="./assets/article3.png" alt="">
+          </div>
+
+
+          <!-- contents -->
+
+          <div class="">
+            <div class="flex gap-4 md:mt-2 lg:mt-0">
+              <div class="flex gap-2">
+                <i class="fa-solid fa-calendar-days text-tertiary-color  text-sm"></i>
+                <h3 class="text-tertiary-color text-sm">JUly14,2024</h3>
+              </div>
+              <div class="flex gap-2">
+                <i class="fa-regular fa-user text-tertiary-color text-sm"></i>
+                <h3 class="text-tertiary-color  text-sm">JUly14,2024</h3>
+              </div>
+
+            </div>
+
+            <div>
+
+              <div class="flex flex-col py-3 justify-between ">
+                <h4 class="text-secondary-color text-xl font-black lg:my-1">How to choose the furniture<br> right of your
+                  home.</h4>
+                <p class="md:mb-4 text-tertiary-color text-base">The barn house captivates with its blend of
+                  rustic charm and modern. The barn house captivates with its blend of rustic charm and modern. </p>
+                <button class="flex gap-3 text-xl font-black ">Read More<i
+                    class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-primary-color rotate-45 h-8 w-8"></i></button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+
+
+    </section>
+    <!-- contact form -->
+  
 
   </main>
+
+  <!-- contact form -->
+  <section class=" bg-[url('./assets/bg.jpg')] bg-cover my-4 py-20">
+   <div class="container mx-auto w-[60rem]">
+
+ <!-- form heading contents -->
+ <div class="flex flex-col items-center gap-6">
+  <h4 class="w-[12rem] text-secondary-color bg-primary-bg text-lg text-center py-2 px-3 rounded-3xl font-bold">
+    <i class="fa-solid fa-arrow-right text-lg pr-2"></i> Let’s Connect
+  </h4>
+  <h1 class="text-3xl md:text-4xl md:w-3/4 lg:text-5xl font-black text-black text-center">Let’s Discuss Next Project
+  </h1>
+  <p class="px-4 md:mb-4 md:w-2/4 text-secondary-color text-center text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+  </div>
+
+  <!-- form inputs -->
+
+  <div class="grid grid-cols-1 md:grid-cols-2 p-6">
+
+    <div class="p-5 bg-white m-2 rounded-3xl">
+      <input class="w-full rounded-lg" type="fname" placeholder="First Name*" required>
+    </div>
+
+    <div class="p-5 bg-white m-2 rounded-3xl">
+      <input class="w-full rounded-lg" type="fname" placeholder="Last Name*" required>
+    </div>
+
+    <div class="p-5 bg-white m-2 rounded-3xl">
+      <input class="w-full rounded-lg" type="fname" placeholder="Phone Number*" required>
+    </div>
+
+    <div class="p-5 bg-white m-2 rounded-3xl">
+      <input class="w-full rounded-lg" type="fname" placeholder="Email Number*" required>
+    </div>
+
+    <div class="md:col-span-2 p-5 bg-white m-2 rounded-3xl">
+      <textarea rows="6" class="w-full rounded-lg" name="" id="" placeholder="Write your message here"></textarea>
+    </div>
+
+    <div class="p-5 rounded-8xl md:col-span-2">
+      
+          <button class="p-3 flex w-full justify-center items-center btn rounded-lg bg-primary-color border-primary-color">Send Mail<i
+            class="fa-solid fa-arrow-up flex justify-center items-center rounded-full bg-background text-white rotate-45 w-6 h-6 lg:h-8 lg:w-8 ml-2"></i></button>
+    </div>
+
+  </div>
+
+   </div>
+
+
+
+
+
+
+  </section>
+
+  <!-- footer -->
+   
 
 </body>
 
